<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:padding="10dp">

        <Button
            android:id="@+id/snoozeButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/snooze_off"
            android:textColor="@color/white"
            app:backgroundTint="#134C7A"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:contentDescription="@string/notify_img"
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_notifications"
             />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/task_saved"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message"
                android:layout_alignParentStart="true"
                android:layout_marginTop="3dp"
                android:text="@string/task_time"
                android:textColor="#000000"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>